# drf-auth

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
accounts/migrations/: 0001_initial.py
product/: models.py  serializer.py  tests.py  urls.py  views.py
product/migrations/: 0001_initial.py
store/: settings.py  urls.py
